--- a/Ecommerce/src/main/resources/application.properties
+++ b/Ecommerce/src/main/resources/application.properties
@@ -21,28 +21,30 @@ server.error.include-stacktrace=never
 
 project.images=/images
 
-# Basic Kafka Configuration
-spring.kafka.bootstrap-servers=localhost:9092
 
-# Kafka consumer properties
-spring.kafka.consumer.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=EcommerceGroup
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
-spring.kafka.consumer.enable-auto-commit=false
 
-# Kafka producer properties
-spring.kafka.producer.bootstrap-servers=localhost:9092
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.producer.acks=all
-spring.kafka.producer.retries=3
-spring.kafka.producer.properties.enable.idempotence=true
-
-# Admin settings
-spring.kafka.admin.fail-fast=false
-
-# Listener settings
-spring.kafka.listener.ack-mode=manual_immediate
+## Basic Kafka Configuration
+#spring.kafka.bootstrap-servers=localhost:9092
+#
+## Kafka consumer properties
+#spring.kafka.consumer.bootstrap-servers=localhost:9092
+#spring.kafka.consumer.group-id=EcommerceGroup
+#spring.kafka.consumer.auto-offset-reset=earliest
+#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+#spring.kafka.consumer.properties.spring.json.trusted.packages=*
+#spring.kafka.consumer.enable-auto-commit=false
+#
+## Kafka producer properties
+#spring.kafka.producer.bootstrap-servers=localhost:9092
+#spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#spring.kafka.producer.acks=all
+#spring.kafka.producer.retries=3
+#spring.kafka.producer.properties.enable.idempotence=true
+#
+## Admin settings
+#spring.kafka.admin.fail-fast=false
+#
+## Listener settings
+#spring.kafka.listener.ack-mode=manual_immediate
