--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.datasource.password=Mahesh@223
 
 # Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-# For runtime: don't drop schema; let Hibernate update, and let schema.sql ensure security tables exist
-spring.jpa.hibernate.ddl-auto=update
+# Use create-drop to rebuild schema fresh and fix foreign key issues
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -35,7 +35,18 @@ jwt.expiration.time=86400000
 
 jwt.cookie.name=EcommerceJWT
 
+# Swagger / OpenAPI Configuration
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.use-root-path=true
 
+# OpenAPI Configuration
+springdoc.openapi.title=E-Commerce API
+springdoc.openapi.description=Complete E-Commerce API with Cart, Address, Order, and Payment Management
+springdoc.openapi.version=1.0.0
 
 ## Basic Kafka Configuration
 #spring.kafka.bootstrap-servers=localhost:9092
